adjusted padding-top on mobile to account for fixed navbar, take 2

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -933,7 +933,7 @@ main.exporting .title {
 
   /* Main content spacing for fixed navbar */
   main {
-    padding-top: 30px;
+    padding-top: 45px;
   }
 
   /* Title section */
